# OpenCDaRR

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: pairwise.yaml
docs/: design-philosophy.md  design_brief.md  how-to-step-by-step.md  lesson-learnt.md  roadmap.md
opencdarr/: __init__.py  config.py  dynamics.py  estimator.py  experiment.py  geo.py  kinematics.py  loop.py  performance.py  rng.py  scenario.py  state.py
opencdarr/cd/: __init__.py  base.py  statebased.py
opencdarr/cns/: __init__.py  base.py  communication.py  navigation.py  noise_distributions.py  surveillance.py
opencdarr/cr/: __init__.py  base.py  mvp.py  vo.py
opencdarr/crr/: __init__.py  base.py  ftr.py  pastcpa.py  probabilistic_ftr.py
scripts/: comm_ipr_sweep.py  comm_layer_demo.py  ipr_angle_sweep.py  surveillance_demo.py
scripts/trajectory_comparison/: README.md  plot.py  run_ours.py  run_reference.py
tests/: test_cd.py  test_cns_communication.py  test_cns_navigation.py  test_cns_surveillance.py  test_config.py  test_cr.py  test_crr.py  test_dynamics.py  test_dynamics_vs_bluesky.py  test_estimator.py  test_experiment.py  test_ftr.py  test_loop.py  test_loop_cns.py  test_loop_pair_memory.py  test_probabilistic_ftr.py  test_scenario.py  test_smoke.py  test_state.py  test_vo.py
vault/: TODO-CNS-in-loop.md  TODO-autopilot-separator-dynamic-integration.md  TODO.md  architecture-dataflow.md  phase-0-plan.md  phase-1-plan.md  phase-10-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-plan.md  phase-tracker.md
vault/algorithms/: README.md
vault/decisions/: 0001-rng-per-particle-spawn.md  0002-analytical-validation-of-dynamics.md  0003-own-the-geodesy-bluesky-free-runtime.md  0004-layered-directed-design-for-multiaircraft-and-ips.md  0005-trajectory-validated-against-bluesky.md  0006-communication-model-design.md  0007-dynamics-as-pluggable-interface.md  0008-velocity-vector-command.md  0011-motioncommand-and-guidance-separation.md  README.md
vault/derivations/: README.md  conflict-geometry.md  cpa-detection.md  ftr-recovery.md  gps-noise.md  mvp-resolution.md  pastcpa-recovery.md  probabilistic-ftr-recovery.md  step-dynamics-m600.md
vault/experiments/: README.md
vault/future-features/: README.md  pilot-response-delay.md  time-varying-reception-probability.md
vault/observations/: README.md  communication-reception-latency.md  loop-communication-integration.md  near-parallel-ipr-inversion.md  recovery-criteria-comparison.md  surveillance-hold-as-is.md  trajectory-level-comparison.md
vault/papers/: README.md
